--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,10 +2,25 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    border-color: black;
+    border-color: rgb(116, 116, 116);
+    overflow-x: hidden;
+    color: white;
 }
 
-/* body{
-    background-color: rgb(19, 19, 19);
-} */
+body{
+    background-color: rgb(5, 5, 5);
+}
 
+input{
+    background-color: transparent;
+}
+
+
+.custom-scrollbar::-webkit-scrollbar {
+    width: 12px;  /* width of the entire scrollbar */
+
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background: #f1f1f1;  /* color of the scrollbar track */
+  }
